--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-node_modules/
+# OS generated files #
+######################
+.DS_Store
+
+# Everything else    #
+######################
+node_modules
+reports
+*.esproj
+*.esproj?
+*.csr
 .idea/
