--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "proteledash",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "node-http-proxy": "^0.2.3"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SubrD/proTeleDash.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SubrD/proTeleDash/issues"
-  },
-  "homepage": "https://github.com/SubrD/proTeleDash#readme"
+    "name": "telegram-socks5-proxy",
+    "version": "0.0.0",
+    "description": "",
+    "main": "lib",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "binary": "^0.3.0",
+        "optimist": "^0.6.1",
+        "put": "0.0.6"
+    }
 }
